--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -1,4 +1,4 @@
-<h2 id="runtime-configuration">{{lang_runtimeConfigHeadline}}</h2>
+<h1>{{lang_bwlehrpoolsuite}}</h1>
 
 <div class="panel panel-default">
 	<div class="panel-heading">
@@ -106,7 +106,9 @@
 			<br>
 			<input type="hidden" name="token" value="{{token}}">
 			<input type="hidden" name="action" value="runtime">
-			<button class="btn btn-primary" type="submit" name="button" value="save">{{lang_save}}</button>
+			<div class="text-right">
+				<button class="btn btn-primary" type="submit" name="button" value="save">{{lang_save}}</button>
+			</div>
 		</form>
 	</div>
 </div>
