--- a/modules-available/dozmod/templates/actionlog-log.html
+++ b/modules-available/dozmod/templates/actionlog-log.html
@@ -1,41 +1,45 @@
-<table class="table table-striped table-bordered">
-	<tr>
-		<th class="text-nowrap">{{lang_when}}</th>
-		{{#showActor}}
-		<th class="text-nowrap">{{lang_user}}</th>
-		{{/showActor}}
-		{{#showTarget}}
-		<th class="text-nowrap">{{lang_actionTarget}}</th>
-		{{/showTarget}}
-		<th class="text-nowrap">{{lang_event}}</th>
-	</tr>
-	{{#events}}
-	<tr>
-		<td class="text-nowrap">{{dateline_s}}</td>
-		{{#showActor}}
-		<td style="min-width:140px">
-			{{#uuserid}}
-			<a href="?do=dozmod&amp;section=actionlog&amp;action=showuser&amp;uuid={{uuserid}}">{{ulastname}}, {{ufirstname}}</a>
-			{{/uuserid}}
-			{{^uuserid}}
-			{{lang_system}}
-			{{/uuserid}}
-		</td>
-		{{/showActor}}
-		{{#showTarget}}
-		<td>
-			{{#targeturl}}
-			<a href="{{targeturl}}">{{targetname}}</a>
-			{{/targeturl}}
-			{{^targeturl}}
-			{{targetname}}
-			{{^targetname}}
-			<span class="small">{{targetid}}</span>
-			{{/targetname}}
-			{{/targeturl}}
-		</td>
-		{{/showTarget}}
-		<td>{{description}}</td>
-	</tr>
-	{{/events}}
+<table style="table-layout: fixed; width: 100%" class="table table-striped table-bordered stupidtable">
+	<thead>
+		<tr>
+			<th class="text-nowrap" data-sort="int">{{lang_when}}</th>
+			{{#showActor}}
+			<th class="text-nowrap" data-sort="string">{{lang_user}}</th>
+			{{/showActor}}
+			{{#showTarget}}
+			<th class="text-nowrap" data-sort="string">{{lang_actionTarget}}</th>
+			{{/showTarget}}
+			<th class="text-nowrap" data-sort="string">{{lang_event}}</th>
+		</tr>
+	</thead>
+	<tbody>
+		{{#events}}
+		<tr>
+			<td class="text-nowrap" data-sort-value="{{dateline}}">{{dateline_s}}</td>
+			{{#showActor}}
+			<td style="min-width:140px">
+				{{#uuserid}}
+				<a href="?do=dozmod&amp;section=actionlog&amp;action=showuser&amp;uuid={{uuserid}}">{{ulastname}}, {{ufirstname}}</a>
+				{{/uuserid}}
+				{{^uuserid}}
+				{{lang_system}}
+				{{/uuserid}}
+			</td>
+			{{/showActor}}
+			{{#showTarget}}
+			<td>
+				{{#targeturl}}
+				<a href="{{targeturl}}">{{targetname}}</a>
+				{{/targeturl}}
+				{{^targeturl}}
+				{{targetname}}
+				{{^targetname}}
+				<span class="small">{{targetid}}</span>
+				{{/targetname}}
+				{{/targeturl}}
+			</td>
+			{{/showTarget}}
+			<td style="word-wrap: break-word">{{description}}</td>
+		</tr>
+		{{/events}}
+	</tbody>
 </table>
