--- a/modules-available/internetaccess/templates/_page.html
+++ b/modules-available/internetaccess/templates/_page.html
@@ -32,5 +32,7 @@
 		<input name="PROXY_PASSWORD" value="{{PROXY_PASSWORD}}" type="{{password_type}}" class="form-control">
 	</div>
 	<br/>
-	<button class="btn btn-primary pull-right" type="submit">{{lang_save}}</button>
+	<div class="text-right">
+		<button class="btn btn-primary" type="submit">{{lang_save}}</button>
+	</div>
 </form>
