[dozmod] fixed some more inconsistencies

--- a/modules-available/dozmod/templates/actionlog-log.html
+++ b/modules-available/dozmod/templates/actionlog-log.html
@@ -26,7 +26,7 @@
 			</td>
 			{{/showActor}}
 			{{#showTarget}}
-			<td>
+			<td style="word-wrap: break-word">
 				{{#targeturl}}
 				<a href="{{targeturl}}">{{targetname}}</a>
 				{{/targeturl}}
