--- a/modules-available/dozmod/templates/mailconfig.html
+++ b/modules-available/dozmod/templates/mailconfig.html
@@ -55,10 +55,10 @@
 			</div>
 			<br>
 			<div class="text-right">
-				<button class="btn btn-warning btn-sm" type="button" id="test-button" name="button" value="test" onclick="slxTestConfig()">{{lang_test}}</button>
+				<button class="btn btn-warning" type="button" id="test-button" name="button" value="test" onclick="slxTestConfig()"><span class="glyphicon glyphicon-envelope"></span> {{lang_test}}</button>
 				<span id="test-spin" style="display:none"><span class="glyphicon glyphicon-refresh slx-rotation"></span></span>
 				<pre id="test-output" style="display:none"></pre>
-				<button class="btn btn-primary btn-sm" type="submit" name="button" value="save">{{lang_save}}</button>
+				<button class="btn btn-primary" type="submit" name="button" value="save"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 				<br>
 				<input type="hidden" name="token" value="{{token}}">
 				<input type="hidden" name="action" value="mail">
