--- a/modules-available/dozmod/templates/templates.html
+++ b/modules-available/dozmod/templates/templates.html
@@ -80,7 +80,7 @@
 			{{/templates}}
 			</div>
 
-			<button type="submit" onclick="return validateForm()" class="btn btn-primary pull-right">{{lang_save}}</button>
+			<button type="submit" onclick="return validateForm()" class="btn btn-primary pull-right"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 		</form>
 		<form method="POST" action="?do=dozmod&amp;section=templates">
 			<input type="hidden" name="token" value="{{token}}">
