--- a/modules-available/backup/templates/_page.html
+++ b/modules-available/backup/templates/_page.html
@@ -7,7 +7,7 @@
 		<div class="panel-heading">{{lang_backup}}</div>
 		<div class="panel-body">
 			<p>{{lang_backupDescription}}</p>
-			<button class="btn btn-primary" type="submit">{{lang_download}}</button>
+			<button class="btn btn-primary pull-right" type="submit">{{lang_download}}</button>
 		</div>
 	</div>
 </form>
@@ -28,14 +28,20 @@
 				</span>
 			</div>
 			<div>
-				<label><input type="checkbox" name="restore_openslx" checked="checked"> {{lang_restoreSystemConfig}}</label>
+				<div class="checkbox">
+					<input type="checkbox" name="restore_openslx" checked="checked">
+					<label><b>{{lang_restoreSystemConfig}}</b></label>
+				</div>
 				<p><i>{{lang_systemExplanation}}</i></p>
 			</div>
 			<div>
-				<label><input type="checkbox" name="restore_dozmod" checked="checked"> {{lang_restoreDozmodConfig}}</label>
+				<div class="checkbox">
+					<input type="checkbox" name="restore_dozmod" checked="checked">
+					<label><b>{{lang_restoreDozmodConfig}}</b></label>
+				</div>
 				<p><i>{{lang_dozmodExplanation}}</i></p>
 			</div>
-			<button class="btn btn-primary" type="submit">{{lang_restore}}</button>
+			<button class="btn btn-primary pull-right" type="submit">{{lang_restore}}</button>
 		</div>
 	</div>
 </form>
