--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -54,7 +54,7 @@
 			<tr id="loc-sub-{{locationid}}">
 				<td colspan="4">
 					<button class="btn btn-success btn-sm pull-right" type="button" onclick="slxAddSubnetRow(this, {{locationid}})" title="{{lang_addNewSubnet}}">
-						<span class="glyphicon glyphicon-plus-sign"></span> {{lang_subnet}}
+						<span class="glyphicon glyphicon-plus"></span> {{lang_subnet}}
 					</button>
 				</td>
 			</tr>
@@ -91,12 +91,8 @@
 		</div>
 
 		<div class ="modal fade" id="deleteLocationModal{{locationid}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-			<div class="modal-dialog" role="document">
+			<div class="modal-dialog" style="width: 400px" role="document">
 				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel2">{{lang_deleteLocation}}</h4>
-					</div>
 					<div class="modal-body">
 						{{lang_areYouSureNoUndo}}
 						<div class="checkbox">
