--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -91,7 +91,7 @@
 						<span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}
 					</button>
 					<button class="btn btn-success" type="button" onclick="slxAddLocationRow()">
-						<span class="glyphicon glyphicon-plus-sign"></span> {{lang_location}}
+						<span class="glyphicon glyphicon-plus"></span> {{lang_location}}
 					</button>
 
 				</td>
@@ -125,7 +125,7 @@ function slxAddLocationRow() {
 		<option value="0">{{lang_noParent}}</option>\
 		{{#list}}<option value="{{locationid}}">{{locationpad}} {{locationname}}</option>{{/list}}\
 		</select></td>\
-		<td class="text-center"><button class="btn btn-default btn-sm" type="button" onclick="removeNewLocationRow(' + slxAddCounter + ')"><span class="glyphicon glyphicon-remove-sign"></span></button></td>\
+		<td class="text-center"><button class="btn btn-default btn-sm" type="button" onclick="removeNewLocationRow(' + slxAddCounter + ')"><span class="glyphicon glyphicon-remove"></span></button></td>\
 	</tr>');
 	slxAddCounter++;
 	newRowCounter++;
@@ -171,7 +171,7 @@ function slxAddSubnetRow(e, lid) {
 		<td>#</td>\
 		<td><input class="form-control cidrstart" type="text" name="newstartaddr[' + slxAddCounter + ']" pattern="\\d{1,3}\.\\d{1,3}\.\\d{1,3}\.\\d{1,3}"></td>\
 		<td><input class="form-control cidrend" type="text" name="newendaddr[' + slxAddCounter + ']" pattern="\\d{1,3}\.\\d{1,3}\.\\d{1,3}\.\\d{1,3}"></td>\
-		<td class="text-center"><button class="btn btn-default btn-sm" type="button" onclick="removeNewSubnetRow(' + slxAddCounter + ')"><span class="glyphicon glyphicon-remove-sign"></span></button></td>\
+		<td class="text-center"><button class="btn btn-default btn-sm" type="button" onclick="removeNewSubnetRow(' + slxAddCounter + ')"><span class="glyphicon glyphicon-remove"></span></button></td>\
 	</tr>');
 	slxAddCounter++;
 	slxAttachCidr();
