--- a/modules-available/locations/templates/subnets.html
+++ b/modules-available/locations/templates/subnets.html
@@ -29,7 +29,7 @@
 				</tr>
 			{{/list}}
 		</table>
-		<div class="text-right">
+		<div class="text-right" style="margin-bottom: 20px">
 			<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 		</div>
 	</form>
