--- a/modules-available/vmstore/templates/page-vmstore.html
+++ b/modules-available/vmstore/templates/page-vmstore.html
@@ -3,72 +3,87 @@
 	<input type="password" name="password_fake" id="password_fake" value=""   style="position:absolute;top:-2000px" tabindex="-1">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="action" value="setstore">
+
+	<h1>{{lang_vmLocation}}</h1>
+
+	<p>{{lang_vmLocationChoose}} <a class="btn btn-default" data-toggle="modal" data-target="#help-store"><span class="glyphicon glyphicon-question-sign"></span></a></p>
+
+
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			{{lang_vmLocation}} <a class="btn btn-default" data-toggle="modal" data-target="#help-store"><span class="glyphicon glyphicon-question-sign"></span></a>
+			<div class="radio">
+				<input type="radio" name="storetype" value="internal" {{pre-internal}}>
+				<label>{{lang_intern}}</label>
+			</div>
 		</div>
-		<div class="panel-body slx-md-width">
-			<p>{{lang_vmLocationChoose}}</p>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<input type="radio" name="storetype" value="internal" {{pre-internal}}> {{lang_intern}}
-				</div>
-				<div class="panel-body">
-					{{lang_noAdditionalInformation}}
-				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<input type="radio" name="storetype" value="nfs" {{pre-nfs}}> NFS
-					<a class="btn btn-default btn-sm" data-toggle="modal" data-target="#help-nfs"><span class="glyphicon glyphicon-question-sign"></span></a>
-				</div>
-				<div class="panel-body">
-					<label for="nfsaddr">NFS-Export</label>
-					<input type="text" class="form-control" name="nfsaddr" value="{{nfsaddr}}" placeholder="1.2.3.4:/export/bwlp" id="nfsaddr">
-				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<input type="radio" name="storetype" value="cifs" {{pre-cifs}}> CIFS
-				</div>
-				<div class="panel-body">
-					<label for="cifsaddr">UNC-Pfad</label>
-					<input type="text" class="form-control" name="cifsaddr" value="{{cifsaddr}}" placeholder="\\samba.server.example.com\bwlp" id="cifsaddr">
-					<br>
-					<label for="cifsuser">{{lang_readWrite}}</label>
-					<div class="input-group">
-						<span class="input-group-addon slx-ga">
-							{{lang_username}}
-						</span>
-						<input type="text" class="form-control" name="cifsuser" value="{{cifsuser}}" placeholder="{{lang_username}}" id="cifsuser">
-						<span class="input-group-addon">
-							{{lang_password}}
-						</span>
-						<input type="{{password_type}}" class="form-control" name="cifspasswd" value="{{cifspasswd}}" placeholder="{{lang_password}}">
-					</div>
-					<br>
-					<label for="cifsuserro">{{lang_readOnly}}</label>
-					<div class="input-group">
-						<span class="input-group-addon slx-ga">
-							{{lang_username}}
-						</span>
-						<input type="text" class="form-control" name="cifsuserro" value="{{cifsuserro}}" placeholder="{{lang_username}}" id="cifsuserro">
-						<span class="input-group-addon">
-							{{lang_password}}
-						</span>
-						<input type="{{password_type}}" class="form-control" name="cifspasswdro" value="{{cifspasswdro}}" placeholder="{{lang_password}}">
-					</div>
-				</div>
-			</div>
-			<button class="btn btn-primary" type="submit">{{lang_save}}</button>
+		<div class="panel-body">
+			{{lang_noAdditionalInformation}}
 		</div>
 	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<div class="radio radio-inline">
+				<input type="radio" name="storetype" value="nfs" {{pre-nfs}}>
+				<label>NFS</label>
+			</div>
+			<a class="btn btn-default btn-sm" data-toggle="modal" data-target="#help-nfs"><span class="glyphicon glyphicon-question-sign"></span></a>
+		</div>
+		<div class="panel-body">
+			<label for="nfsaddr">NFS-Export</label>
+			<input type="text" class="form-control" name="nfsaddr" value="{{nfsaddr}}" placeholder="1.2.3.4:/export/bwlp" id="nfsaddr">
+		</div>
+	</div>
+
+
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<div class="radio">
+				<input type="radio" name="storetype" value="cifs" {{pre-cifs}}>
+				<label>CIFS</label>
+			</div>
+		</div>
+		<div class="panel-body">
+			<label for="cifsaddr">UNC-Pfad</label>
+			<input type="text" class="form-control" name="cifsaddr" value="{{cifsaddr}}" placeholder="\\samba.server.example.com\bwlp" id="cifsaddr">
+			<br>
+			<label for="cifsuser">{{lang_readWrite}}</label>
+			<div class="input-group">
+				<span class="input-group-addon slx-ga">
+					{{lang_username}}
+				</span>
+				<input type="text" class="form-control" name="cifsuser" value="{{cifsuser}}" placeholder="{{lang_username}}" id="cifsuser">
+				<span class="input-group-addon">
+					{{lang_password}}
+				</span>
+				<input type="{{password_type}}" class="form-control" name="cifspasswd" value="{{cifspasswd}}" placeholder="{{lang_password}}">
+			</div>
+			<br>
+			<label for="cifsuserro">{{lang_readOnly}}</label>
+			<div class="input-group">
+				<span class="input-group-addon slx-ga">
+					{{lang_username}}
+				</span>
+				<input type="text" class="form-control" name="cifsuserro" value="{{cifsuserro}}" placeholder="{{lang_username}}" id="cifsuserro">
+				<span class="input-group-addon">
+					{{lang_password}}
+				</span>
+				<input type="{{password_type}}" class="form-control" name="cifspasswdro" value="{{cifspasswdro}}" placeholder="{{lang_password}}">
+			</div>
+		</div>
+	</div>
+	<button class="btn btn-primary pull-right" type="submit"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
+
 </form>
 
 <div class="modal fade" id="help-store" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">{{lang_vmLocation}}</div>
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				{{lang_vmLocation}}
+			</div>
 			<div class="modal-body">
 				<p>
 					{{lang_vmLocationHelp1}}
@@ -80,7 +95,6 @@
 					{{lang_vmLocationHelp3}}
 				</p>
 			</div>
-			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 		</div>
 	</div>
 </div>
@@ -88,7 +102,10 @@
 <div class="modal fade" id="help-nfs" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">NFS</div>
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				NFS
+			</div>
 			<div class="modal-body">
 				<p>
 					{{lang_nfsHelp1}}
@@ -105,7 +122,6 @@
 /mnt/images    *(ro,async)
 				</pre>
 			</div>
-			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 		</div>
 	</div>
 </div>
