--- a/modules-available/webinterface/templates/passwords.html
+++ b/modules-available/webinterface/templates/passwords.html
@@ -6,20 +6,30 @@
 		<div class="panel-body">
 			<p>{{lang_passwordsDescription}}</p>
 			<div class="input-group" onclick="$('#pmshow').prop('checked', true)">
-				<span class="input-group-addon"><input id="pmshow" type="radio" name="mode" value="show" {{selected_show}}></span>
+				<span class="input-group-addon">
+					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+						<input id="pmshow" type="radio" name="mode" value="show" {{selected_show}}>
+						<label style="padding: 0"></label>
+					</div>
+				</span>
 				<span class="form-control">
 					{{lang_showPasswords}}
 				</span>
 			</div>
 			<div class="input-group" onclick="$('#pmhide').prop('checked', true)">
-				<span class="input-group-addon"><input id="pmhide" type="radio" name="mode" value="hide" {{selected_hide}}></span>
+				<span class="input-group-addon">
+					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+						<input id="pmhide" type="radio" name="mode" value="hide" {{selected_hide}}>
+						<label style="padding: 0"></label>
+					</div>
+				</span>
 				<span class="form-control">
 					{{lang_hidePasswords}}
 				</span>
 			</div>
 			<br>
 			<div class="pull-right">
-				<button type="submit" class="btn btn-primary">{{lang_save}}</button>
+				<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 			</div>
 		</div>
 	</div>
