--- a/modules-available/webinterface/templates/customization.html
+++ b/modules-available/webinterface/templates/customization.html
@@ -23,7 +23,7 @@
 				</label>
 			</div>
 			<div class="pull-right">
-				<button type="submit" class="btn btn-primary">{{lang_save}}</button>
+				<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 			</div>
 		</div>
 	</div>
